# fwk

./: CMakeLists.txt  Kconfig  README.md
apis/inc/: mcpwm_api.h
apis/src/: mcpwm_api.c
drivers/inc/: accelerometer_driver.h  brushed_motor_driver.h  buttons_driver.h  leds_driver.h
drivers/src/: accelerometer_driver.c  brushed_motor_driver.c  buttons_driver.c  leds_driver.c
hil/inc/: hbridge_dir_hil.h  lis2dw12_hil.h
hil/src/: hbridge_dir_hil.c  lis2dw12_hil.c
services/: Kconfig.pid_service
services/inc/: pid_service.h
services/src/: pid_service.c
utils/inc/: os_utils.h
utils/src/: os_utils.c
